--- a/lza_pad/build.gradle
+++ b/lza_pad/build.gradle
@@ -17,6 +17,7 @@ android {
         targetSdkVersion 15
         versionCode 2
         versionName '1.1'
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
