--- a/lza_pad/src/main/AndroidManifest.xml
+++ b/lza_pad/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lza.pad"
-    android:versionCode="1"
-    android:versionName="1.0">
+    android:versionCode="2"
+    android:versionName="1.1">
 
     <uses-sdk android:minSdkVersion="8"
         android:targetSdkVersion="15"/>
@@ -86,6 +86,14 @@
         <activity android:name=".ui.fragment.preference.ModuleApiSettings"
             android:theme="@style/PreferenceTheme"
             />
+
+        <service android:name=".service.CacheService"
+            android:process=":cache"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.lza.pad.cache.DATA"/>
+            </intent-filter>
+        </service>
 
         <service android:name=".ui.service.CacheDataService"
             android:process=":cache"
