--- a/lza_pad/src/main/AndroidManifest.xml
+++ b/lza_pad/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:name=".ui.activity.main.SplashActivity"
             android:label="@string/app_name"
             android:enabled="true"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,6 +48,7 @@
             android:name=".ui.activity.main.HomeActivity"
             android:enabled="true"
             android:launchMode="singleTask"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".ui.fragment.preference.old.MainPreferenceActivity"
@@ -54,6 +56,7 @@
             android:launchMode="singleTask"
             android:theme="@style/PreferenceTheme"
             android:uiOptions="splitActionBarWhenNarrow"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".ui.fragment.preference.old.GlobalPreferenceActivity"
@@ -61,6 +64,7 @@
             android:launchMode="singleTask"
             android:theme="@style/PreferenceTheme"
             android:uiOptions="splitActionBarWhenNarrow"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".ui.fragment.preference.old.ModulePreferenceActivity"
@@ -68,6 +72,7 @@
             android:launchMode="singleTask"
             android:theme="@style/PreferenceTheme"
             android:uiOptions="splitActionBarWhenNarrow"
+            android:screenOrientation="portrait"
             />
         <activity
             android:name=".ui.fragment.preference.BasePreferenceActivity"
@@ -75,16 +80,25 @@
             android:launchMode="singleTask"
             android:theme="@style/PreferenceTheme"
             android:uiOptions="splitActionBarWhenNarrow"
+            android:screenOrientation="portrait"
             />
         <!--android:parentActivityName=".ui.activity.main.HomeActivity"-->
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".ui.activity.main.NewHomeActivity"/>
-        <activity android:name=".ui.activity.TestActivity"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".ui.activity.main.NewHomeActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".ui.activity.TestActivity"
+            android:screenOrientation="portrait"
+            />
         <activity android:name=".ui.fragment.preference.ModuleMoreSettings"
             android:theme="@style/PreferenceTheme"
+            android:screenOrientation="portrait"
             />
         <activity android:name=".ui.fragment.preference.ModuleApiSettings"
             android:theme="@style/PreferenceTheme"
+            android:screenOrientation="portrait"
             />
 
         <service android:name=".service.CacheService"
