--- a/lza_pad_core/src/main/AndroidManifest.xml
+++ b/lza_pad_core/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lza.pad.core">
 
-    <application
+    <!--<application
         android:name=".utils.GlobalContext"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher" >
         <activity android:name=".CoreActivity"/>
-    </application>
+    </application>-->
 
 </manifest>
